# nocta

./: CMakeLists.txt  README.md
design/: noc_spec.md
examples/: batchnorm.c  benchmark.c  benchmark_gpu.c  dropout_test.c  mnist.c  mnist.noc  save_load.c  xor.c
include/nocta/: nocta.h
include/nocta/autograd/: backward.h  node.h
include/nocta/core/: device.h  dtype.h  error.h  memory.h  serialize.h  tensor.h
include/nocta/cuda/: cuda_kernels.h
include/nocta/lang/: ast.h  chunk.h  compiler.h  lexer.h  object.h  opcode.h  parser.h  token.h  value.h  vm.h
include/nocta/nn/: batchnorm.h  conv.h  dropout.h  linear.h  module.h
include/nocta/ops/: activation.h  arithmetic.h  loss.h  matmul.h  reduction.h
include/nocta/optim/: adam.h  optimizer.h  sgd.h
src/: main.c
src/autograd/: backward.c  node.c
src/core/: device.c  memory.c  serialize.c  tensor.c
src/cuda/: cuda_activation.cu  cuda_batchnorm.cu  cuda_conv.cu  cuda_device.cu  cuda_elementwise.cu  cuda_loss.cu  cuda_matmul.cu  cuda_reduction.cu
src/lang/: chunk.c  compiler.c  lexer.c  object.c  parser.c  value.c  vm.c
src/nn/: batchnorm.c  conv.c  dropout.c  linear.c  module.c
src/ops/: activation.c  arithmetic.c  loss.c  matmul.c  reduction.c
src/optim/: adam.c  optimizer.c  sgd.c
tests/: minunit.h  test_autograd.c  test_chunk.c  test_compiler.c  test_flow.c  test_func.c  test_io.c  test_lexer.c  test_loop.c  test_main.c  test_native.c  test_nn.c  test_ops.c  test_optim.c  test_parser.c  test_reduction.c  test_tensor.c  test_vm.c
wiki/: Building.md  Home.md  Language-Guide.md  Standard-Library.md
